editing the swagger ui docs
